# rsingularity

./: .gitignore  Cargo.toml  README.md  index.html
assets/translations/: en-US.ftl
scss/: index.scss
src/: assets.rs  danger.rs  difficulty.rs  effects.rs  groups.rs  main.rs  mixer.rs  state.rs  story.rs  technology.rs  theme.rs  translations.rs
xtask/: Cargo.toml
xtask/src/: main.rs
